# RayTracingSeries

./: .gitignore  CMakeLists.txt
img/: image_2mat_fuzz1_100spp.ppm  image_3mat_fuzz_100spp.ppm  image_3mat_wrong_100spp.ppm  image_cam_20fov_fuzz_100spp.ppm  image_diffuse_10spp.ppm  image_diffuse_outside.ppm  image_hollow_fuzz_1000spp.ppm  image_hollow_fuzz_100spp.ppm
img/NextWeek/: checkered_spheres_bvh_tex.ppm  cornell_box_bvh_tex.ppm  cornell_box_err_bvh_tex.ppm  cornell_smoke_bvh_tex.ppm  cornell_smoke_err_bvh_tex.ppm  earth_bvh_tex.ppm  final_scene_multhreads_bvh_tex.ppm  final_scene_multhreads_quick_bvh_tex.ppm  final_scene_quick_bvh_tex.ppm  light_bvh_tex.ppm  motion_blur.ppm  motion_blur_bvh.ppm  motion_blur_bvh_tex.ppm  perlin_bvh_tex.ppm  perlin_interp2_bvh_tex.ppm  perlin_interp_bvh_tex.ppm  perlin_trilinear_bvh_tex.ppm  perlin_turb_bvh_tex.ppm  quads_bvh_tex.ppm
img/Rest/: cornellbox.ppm  cornellbox_stratified.ppm
img/Weekend/: image.ppm  image_2mat_100spp.ppm  image_3mat_fuzz_100spp.ppm  image_cam_20fov_0defocus_fuzz_100spp.ppm  image_cam_20fov_10defocus0_fuzz_100spp.ppm  image_cam_90fov_fuzz_100spp.ppm  image_cam_fuzz_100spp.ppm  image_diffuse.ppm  image_diffuse_500spp.ppm  image_hollow0_fuzz_100spp.ppm
src/InOneWeekend/: camera.h  color.h  global.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  ray.h  sphere.h  vec3.h
src/NextWeek/: aabb.h  bvh.h  camera.h  constant_medium.h  dynamic_thread_pool.h  global.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  perlin.h  quad.h  sphere.h  texture.h  vec3.h
src/Rest/: aabb.h  bvh.h  camera.h  global.h  hittable.h  interval.h  main.cpp  material.h  quad.h  ray.h  rtw_stb_image.h  sphere.h  texture.h
